Implementando BOOTSTRAP COMO DEPENDENDENCIA

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="BLOOM — Ropa personalizada y única. Diseña tus prendas a tu estilo." />
     <title>BLOOM | Ropa Personalizada</title>
-    <link rel="shortcut icon" href="/src/assets/BLOOM.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <!-- Bootstrap Bundle (JS + Popper) para el menú responsive -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script type="module" src="/src/main.jsx"></script>
   </body>
   </html>
 
